<resources>
    <string name="app_name">PlantGO_Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sample Name</string>
    <string name="nav_header_subtitle">Sample Information</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">어서오세요!</string>
    <string name="login_failed">"Login failed"</string>

    <string name="facebook_app_id">2635387943150872</string>
    <string name="fb_login_protocol_scheme">fb2635387943150872</string>
    <string name="success_login">Facebook으로 로그인 성공</string>
    <string name="failed_login">로그인 실패, 다시 시도하세요</string>

    <string name="my_plant_family">My Plant Family</string>
    <string name="state_default">반가워요!</string>
    <string name="sensor_name">식물 이름:  </string>
    <string name="sensor_date">등록일:  </string>
    <string name="sensor_light">밝기:  </string>
    <string name="sensor_temp">온도:  </string>
    <string name="sensor_humid">습도:  </string>
    <string name="sensor_soil">토양 수분:  </string>
    <string name="sensor_dust">미세 먼지:  </string>

</resources>
